chunk of zhao loc

--- a/localization/english/missions/sushen_missions_ti_l_english.yml
+++ b/localization/english/missions/sushen_missions_ti_l_english.yml
@@ -121,8 +121,8 @@
  #Modifiers
  sushen_organised_army: "Reorganized Army"
  desc_sushen_organised_army: "Our Clan Chiefs have reorganized our military forces and subjected them to an intense training regimen."
- sushen_capital_mod: "Formalized Religious Practices"
- desc_sushen_capital_mod: "It has been decided by the religious authorities within our land that everyone should worship in the same manner; no longer will the people be left to their own devices."
+ sushen_capital_mod: "Growth of Regional Trade"
+ desc_sushen_capital_mod: "This territory is benefitting immensely from the growth of regional trade in the area; merchants happily seek out the markets here and the economy flourishes."
  sushen_chinese_trade: "Chinese Trade Connections"
  desc_sushen_chinese_trade: "Thanks to our reputation for crafting exceedingly luxurious goods, the Chinese have sent their merchants to our markets in hopes of obtaining our items at a discounted price."
  sushen_conversion_mod: "A Spirit of Conversion"
