--- a/localization/english/missions/zhao_missions_l_english.yml
+++ b/localization/english/missions/zhao_missions_l_english.yml
@@ -20,13 +20,13 @@
  zhao_missions_task_4_DESC: "The northern frontier is a dangerous place, where the open steppe soon gives way to harsh deserts that are home to bandit horselords that make life miserable for the civilized peoples of the Earth. We must protect ourselves by constructing adequate fortifications, but this cannot be a simple outpost; it needs to be a beacon of civilization in the region, a place that our soldiers will find worthy of protecting. \n\n\n\n\n\n\n\n\n\n@tibet_mil9!"
 
  zhao_missions_task_5: "Barbarian Tribute"
- zhao_missions_task_5_DESC: "To the benefit of all, we currently enjoy decent relationships with [GetCountry('LNH').GetName] and [GetCountry('LOF').GetName] - our peoples seem to get along just fine. But might this relationship be developed? There is much that we could do with these barbarians, after all - they will have to do whatever we decide. \n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
+ zhao_missions_task_5_DESC: "To the benefit of all, we currently enjoy decent relationships with [GetCountry('LNH').GetName], [GetCountry('HEZ').GetName]  and [GetCountry('LOF').GetName] - our peoples seem to get along just fine and trade and travel flows openly. But might this relationship be developed? There is much that we could do with these barbarians, after all, and they will have to go along with whatever we decide. \n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  zhao_missions_task_6: "Zhao Idioms"
  zhao_missions_task_6_DESC: "The words and ways of the common people have captivated the hearts and minds of the poets, who have collected some of our traditional sayings and mannerisms and immortalized them in song. People all across the land are now familiar with our so-called #Y Zhao Idioms#!, which they view as a source of folk wisdom that is worthy of praise and emulation - an opinion that we agree with. \n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
 
  zhao_missions_task_7: "Capital of the West"
- zhao_missions_task_7_DESC: "Although the capital was moved to [ROOT.GetCountry.GetCapital.GetName], there is no reason for us to forget our former home, the second city in all of [ROOT.GetCountry.GetName], [GetProvince('(int32)8681').GetName]. We should pour the resources of the state in our second capital - the gods will reward us for our fidelity to promises made long ago. \n\n\n\n\n\n\n\n\n\n@china_mil13!"
+ zhao_missions_task_7_DESC: "Although the capital was moved to [ROOT.GetCountry.GetCapital.GetName], there is no reason for us to forget our former home, the second city in all of [ROOT.GetCountry.GetName], [GetProvince('(int32)8636').GetName]. We should pour the resources of the state in our second capital - the gods will reward us for our fidelity to promises made long ago. \n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  zhao_missions_task_8: "End Zhongshan"
  zhao_missions_task_8_DESC: "It has been decided that the enclave of [GetCountry('ZHS').GetName] has been tolerated long enough, and it is time to put an end to their delusions of independence from the [ROOT.GetCountry.GetAdjective]. \n\n\n\n\n\n\n\n\n\n@china_mil4!"
@@ -82,37 +82,37 @@
 
  #Events 
  me_zhao_1_title: "$zhao_missions_task_1$"
- me_zhao_1_desc: ""
- me_zhao_1.a: ""
+ me_zhao_1_desc: "When [GetCharacter('(int32)634').GetName] made the unorthodox suggestion to [ROOT.GetCountry.GetRuler.GetName] that our horsemen start wearing the foreign clothing styles of the savage nomads in our northern provinces, there was a great deal of pushback from the conservative elements at court who abhorred the open embrace of such strange behaviors - what would our ancestors think, to see us abandoning [ROOT.GetCountry.GetAdjective] ways to dress like herders?\n\nAnd yet once [ROOT.GetCountry.GetRuler.GetFirstName] had been convinced, there was no going back - our cavalry would adopt Hufu, the apparel of the barbarian. [GetCharacter('(int32)634').GetFirstName] was certain that our military forces would benefit, and the wise Minister was soon proven to be correct. The #E Loufan#! tribes are backwards but they excel as riders, and their clothes are well-suited to maneuvering on horseback.\n\nOur mounted levies are even deadlier than they were before..."
+ me_zhao_1.a: "I have faith in your counsel, [GetCharacter('(int32)634').GetName] - well done"
 
  me_zhao_2_title: "$zhao_missions_task_2$"
- me_zhao_2_desc: ""
- me_zhao_2.a: ""
+ me_zhao_2_desc: "For better or for worse, the ruinous influence of [GetCharacter('(int32)633').GetName] upon the House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] has finally been tamed. The public opposition to [ROOT.GetCountry.GetRuler.GetName]'s initiatives were more than an annoyance - they brought shame upon the entire [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family and cast doubts regarding their fitness to rule over [ROOT.GetCountry.GetName] during such tumultuous times.\n\nBut in another display of [ROOT.GetCountry.GetRuler.GetFirstName]'s deftness at maneuvering through the intrigues at court, the crotchety old Uncle has been silenced, and the opposition at court has fragmented and splintered into irrelevance."
+ me_zhao_2.a: "May we never deal with familial intrigues again"
 
  me_zhao_3_title: "$zhao_missions_task_3$"
- me_zhao_3_desc: ""
- me_zhao_3.a: ""
+ me_zhao_3_desc: "'Press forward and shoot! Is he going to hit the target...yes! Whoo hoo! Excellent riding, chosen ones of [GetDeityDefinition('omen_chinese_huangdi').GetName]!'\n\nWhen the affairs of state do not keep [ROOT.GetCountry.GetRuler.GetName] stuck within the Palace at [GetProvince('(int32)8681').GetName], the [ROOT.GetCountry.GetRulerTitle] can often be found hanging around the conscription camps built on the outskirts of the city, shouting encouragement to the levies that are training in the fields and farmlands outside of the Zhao capital. Every time one of our horsemen hits a target, the cheers of thousands splits the air, followed by Zhao war cries.\n\nThe efforts to tap into the manpower resources of Handan have been a smashing success, and already the armies and levies of [ROOT.GetCountry.GetName] are filled with battle-hungry soldiers that are ready to prove their mettle."
+ me_zhao_3.a: "Believe me, you will have many opportunities to fight for Zhao..."
 
  me_zhao_4_title: "$zhao_missions_task_4$"
- me_zhao_4_desc: ""
- me_zhao_4.a: ""
+ me_zhao_4_desc: "Thanks to the efforts of [ROOT.GetCountry.GetRuler.GetName] to spread the light of civilization in the barbarous lands of #E Wuyuan#!, the northern frontier has never been as stable or secure as it is today.\n\nIt appears that the fortress built in the region is strong enough to deter raids from the steppe dogs that like to nip at our borders from time to time, who have fled like the cowards they are deep into their grasslands. In order to prevent them from returning at their ease, we have taken control of important trade routes that they used to terrorize."
+ me_zhao_4.a: "The people can put their minds at ease, for I will protect [ROOT.GetCountry.GetName]"
 
  me_zhao_5_title: "$zhao_missions_task_5$"
- me_zhao_5_desc: ""
- me_zhao_5.a: ""
- me_zhao_5.b: ""
+ me_zhao_5_desc: "[ROOT.GetCountry.GetRuler.GetName] has finished [ROOT.GetCountry.GetRuler.GetHerHis] campaign to dazzle the Tribal Chiefs of [GetCountry('LNH').GetName], [GetCountry('HEZ').GetName]  and [GetCountry('LOF').GetName], who have been brought to [ROOT.GetCountry.GetCapital.GetName] and shown extravagant generosity, the likes of which these barbarians have hardly seen.\n\nUpon arriving at the Zhao capital, they were presented with silk robes and vast quantities of wine, which they eagerly consumed. Horse races and archery displays were provided as entertainment, and by the time that the dancing slaves came out to the sound of the drum and flute, an exquisite feast had been set before the Chiefs that they promptly devoured. There were steaming platters of roasted mutton, pork, beef, braised poultry, fresh and cured fish, racks of smoked sausages, fresh vegetables and those pickled in vinegar, gigantic bowls of steaming rice, and all was accompanied by a fragrant ocean of sauces and hearty gravies - enough of a culinary display to rival even the greatest excesses of the #E Shang Dynasty#!, an overwhelming expression of Zhao largesse.\n\nBy the time that it came to dispense with pleasantries and discuss business, [ROOT.GetCountry.GetRuler.GetFirstName] found that [ROOT.GetCountry.GetRuler.GetSheHe] had the barbarians in the palm of [ROOT.GetCountry.GetRuler.GetHerHis] hand and could take whatever [ROOT.GetCountry.GetRuler.GetSheHe] wanted."
+ me_zhao_5.a: "You must submit to me as feudatories of mighty Zhao"
+ me_zhao_5.b: "Your warriors must fight for me as auxiliaries"
 
  me_zhao_6_title: "$zhao_missions_task_6$"
- me_zhao_6_desc: ""
- me_zhao_6.a: ""
+ me_zhao_6_desc: "Although our common sayings and expressions are a matter of every-day speech, [ROOT.GetCountry.GetRuler.GetName] has given the order to the scribes living within the palace at [ROOT.GetCountry.GetCapital.GetName] to begin writing down these tidbits of folk wisdom so that all nations might learn from our ways.\n\nThanks to this scholarly effort to catalog our cultural witticisms and expressions, our neighboring states are beginning to use our idioms in their own languages - proof that our culture is one to be emulated."
+ me_zhao_6.a: "May our ways be preserved for the generations to come"
 
  me_zhao_7_title: "$zhao_missions_task_7$"
- me_zhao_7_desc: ""
- me_zhao_7.a: ""
+ me_zhao_7_desc: "Despite what others might say, our people are sentimental, proudly remembering the deeds and glories of the past and remaining faithful to the ancient ways. It is this spirit of duty that has led [ROOT.GetCountry.GetRuler.GetName] to pour some of [ROOT.GetCountry.GetName]'s resources into the city of [GetProvince('(int32)8636').GetName], which was once the seat of our power and could serve as a second capital, a capital of the west."
+ me_zhao_7.a: "Jinyang must not wither away, but must bloom on the vine"
 
  me_zhao_8_title: "$zhao_missions_task_8$"
- me_zhao_8_desc: ""
- me_zhao_8.a: ""
+ me_zhao_8_desc: "As was expected, the meager forces of [GetCountry('ZHS').GetName] crumbled apart like a fish cake, and we have seized everything that was theirs for the greater glory of [ROOT.GetCountry.GetName], o [ROOT.GetCountry.GetRuler.GetName]."
+ me_zhao_8.a: "You bother me with such an insignificant report?"
 
  me_zhao_9_title: "$zhao_missions_task_9$"
  me_zhao_9_desc: ""
