--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -1321,3 +1321,11 @@ wonder_jixia_academy_desc:0 "The legendary Academy of Jixia, known far and wide 
 
 
 barbaricum_bastarnia_mission_task_10_req_tt:0 "#Y Export#! or #Y import#! from a #E Bastarnae#! or #E Vandal#! country."`
+
+#Decisions
+formable_not_rhaetia_exists:0 "#Y Rhaetia#! must NOT exist."
+form_rhaetia:0 "Unite Rhaetia"
+form_rhaetia_desc:0 "The Rhaetians are a group of Alpine people with whom we share many attributes. A strong leader to unite them against foes from outside is paramount to our continued survival."
+RHAETIA_NAME:0 "Rhaetia"
+RHAETIAN_ADJECTIVE:0 "Rhaetian"
+any_rhaetian_country_tt:0 "@trigger_no! All #Y Rhaetian#! nations are our subjects, or we are the only #Y Rhaetian nation."
