--- a/localization/english/missions/thuc_phan_missions_ti_l_english.yml
+++ b/localization/english/missions/thuc_phan_missions_ti_l_english.yml
@@ -8,76 +8,76 @@
  #Missions
 
  thuc_phan_missions_task_1: "Rice Farms"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_1_DESC: "Our people have the need for rice, and [ROOT.GetCountry.GetRuler.GetName] has signaled that [ROOT.GetCountry.GetRuler.GetSheHe] will go to great lengths in order to provide food security for the citizens of [ROOT.GetCountry.GetName]\n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 
  thuc_phan_missions_task_2: "Fill the Treasury"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_2_DESC: "There are many calamities that can befall a nation, and it behooves our [ROOT.GetCountry.GetRulerTitle] to have funds in the treasury that are saved for unforeseen disasters. \n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
- thuc_phan_missions_task_3: "Defence against the Hung"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_3: "Defence Against the Hung"
+ thuc_phan_missions_task_3_DESC: "We are fortunate to have natural impassables that protect our southern borders, and yet there are things that we could do to make sure that the barbaric #E Hung#! to the west stay away from our cities and farms.\n\n\n\n\n\n\n\n\n\n@east_steppemil7!"
 
  thuc_phan_missions_task_4: "Rise of Thuc Phan"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_4_DESC: "The popularity of #E Thuc Phan#! has become undeniable, and the people clamor for him to become the [ROOT.GetCountry.GetRulerTitle] of [ROOT.GetCountry.GetName] - much to [ROOT.GetCountry.GetRuler.GetName]'s chagrin.\n\n\n\n\n\n\n\n\n\n@tibet_mil6!"
 
  thuc_phan_missions_task_5: "Unite the Northern Tribes"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_5_DESC: "For the first time in memory, the fierce northern tribes have been conquered and united under one banner - a shock to the soft civilized nations that have underestimated the growing strength of [ROOT.GetCountry.GetName].\n\n\n\n\n\n\n\n\n\n@east_steppemil6!"
 
  thuc_phan_missions_task_6: "March to the South"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_6_DESC: "The city-dwelling [GetCountry('LCV').GetName] and their pathetic Chiefs have always thought that their Lacviet civilization was superior to our own Gui ways. The time has come to see if they can resist our intentions, for we plan on marching south and returning home with the spoils of war.\n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
  thuc_phan_missions_task_7: "Conquest of Hanoi"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_7_DESC: "Our triumphant armies have conquered territories that have made us a powerful nation - the gods are with [ROOT.GetCountry.GetRuler.GetName], who has led us to this momentous occasion! \n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  thuc_phan_missions_task_8: "A New Kingdom"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_8_DESC: "We have grown so much over the last few years that it has been suggested we reform our government to match the grandeur of what we have accomplished. We are no tribe, ruled by a Chieftain, but a kingdom that needs a King.\n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  thuc_phan_missions_task_9: "Co Lao Citadel"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_9_DESC: "With our borders in a respectable state, [ROOT.GetCountry.GetRuler.GetName] can afford to turn [ROOT.GetCountry.GetRuler.GetHerHis] attention inward, and the thought of building an impregnable citadel has been a difficult one to shake.\n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
  thuc_phan_missions_task_10: "The Northern Threat"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_10_DESC: "There are some timid souls living in [ROOT.GetCountry.GetCapital.GetName] that have suggested that we are threatened by the barbarian tribes that live to the north, but the mighty [ROOT.GetCountry.GetName] shall destroy any that dare to challenge our power!\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
  thuc_phan_missions_task_11: "The Southern Coast"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_11_DESC: "Not only must we take the southern coast of the lands that run alongside the #E Mare Nanhai#! for [ROOT.GetCountry.GetName], but we must develop this region and take care of the people. It must have a port, one that will become the home to the navies that shall patrol the seas and protect it from pirates.\n\n\n\n\n\n\n\n\n\n@india_mil1!"
 
  thuc_phan_missions_task_12: "The Two People"
- thuc_phan_missions_DESC: ""
+ thuc_phan_missions_task_12_DESC: "Although we have clashed in the past, drawing each other's blood and despoiling the lands of the other, we cannot live in a state of disunion but must embrace our brotherhood, for it is our destiny to for the two people to become the one. \n\n\n\n\n\n\n\n\n\n@china_mil11!"
 
 
 #Events
- me_thuc_phan_1_title: ""
- me_thuc_phan_1_desc: ""
- me_thuc_phan_1.a: ""
+ me_thuc_phan_1_title: "Rice Farms"
+ me_thuc_phan_1_desc: "When word came to [ROOT.GetCountry.GetRuler.GetName] that the rice farms built throughout the province of [GetProvince('(int32)9178').GetName] were completed, there was a sense of relief that spread across [ROOT.GetCountry.GetRuler.GetHerHis] face.\n\nHunger has always been an enemy of the people, who are often caught between rampaging armies and expect to maintain their agriculture during periods of war. But thanks to the efforts of [ROOT.GetCountry.GetRuler.GetFirstName], these fears have been calmed for the time being."
+ me_thuc_phan_1.a: "The fields of #E Linchen#! shall fill many bellies with rice"
 
- me_thuc_phan_2_title: ""
- me_thuc_phan_2_desc: ""
- me_thuc_phan_2.a: ""
+ me_thuc_phan_2_title: "Fill the Treasury"
+ me_thuc_phan_2_desc: "It is often said that like attracts like and one good thing follows another, so it comes as no surprise that the full treasuries of [ROOT.GetCountry.GetName] have also afforded [ROOT.GetCountry.GetRuler.GetName] some political capital that the ambitious [ROOT.GetCountry.GetRulerTitle] is only to happy to spend."
+ me_thuc_phan_2.a: "Everything that I do is for the betterment of the people"
 
- me_thuc_phan_3_title: ""
- me_thuc_phan_3_desc: ""
- me_thuc_phan_3.a: ""
+ me_thuc_phan_3_title: "Defence Against the Hung"
+ me_thuc_phan_3_desc: "Thanks to the strenuous efforts of [ROOT.GetCountry.GetRuler.GetName]'s men to construct fortifications in our south, we are in a state of military preparedness that rivals anything that we have ever experienced - something that feels good to [ROOT.GetCountry.GetRuler.GetFirstName], who feels that [ROOT.GetCountry.GetRuler.GetSheHe] is beginning to leave traces of [ROOT.GetCountry.GetRuler.GetHerHis] legacy through the nation."
+ me_thuc_phan_3.a: "The barbarians will never take these walls!"
 
- me_thuc_phan_4_title: ""
- me_thuc_phan_4_desc: ""
- me_thuc_phan_4.a: ""
+ me_thuc_phan_4_title: "Rise of Thuc Phan"
+ me_thuc_phan_4_desc: "Although many assumed that the death of [SCOPE.sCharacter('thuc_phan_char').GetName]'s father #E Thuc Che#! would render him isolated politically and weak, everyone has underestimated the young man, who has deftly maneuvered his way through the court at [ROOT.GetCountry.GetCapital.GetName] with a skill that belies his age.\n\nBut his greatest triumph - a fatal blow to [ROOT.GetCountry.GetRuler.GetName] - was privately securing the loyalty of the Lords that once swore oaths to his father, and once that fateful bridge had been crossed, the true authority of the tribe passed to [SCOPE.sCharacter('thuc_phan_char').GetFirstName] in that moment.\n\nWhen the bold youth declared that he would now be [ROOT.GetCountry.GetRulerTitle], there was no one left to stand with [ROOT.GetCountry.GetRuler.GetFirstName], who quickly realized the game was up."
+ me_thuc_phan_4.a: "May the gods guide you better than they have me, [SCOPE.sCharacter('thuc_phan_char').GetFirstName]"
 
- me_thuc_phan_5_title: ""
+ me_thuc_phan_5_title: "Unite the Northern Tribes"
  me_thuc_phan_5_desc: ""
  me_thuc_phan_5.a: ""
 
- me_thuc_phan_6_title: ""
+ me_thuc_phan_6_title: "March to the South"
  me_thuc_phan_6_desc: ""
  me_thuc_phan_6.a: ""
 
- me_thuc_phan_7_title: ""
+ me_thuc_phan_7_title: "Conquest of Hanoi"
  me_thuc_phan_7_desc: ""
  me_thuc_phan_7.a: ""
 
- me_thuc_phan_8_title: ""
+ me_thuc_phan_8_title: "A New Kingdom"
  me_thuc_phan_8_desc: ""
  me_thuc_phan_8.a: ""
 
- me_thuc_phan_9_title: ""
+ me_thuc_phan_9_title: "Co Lao Citadel"
  me_thuc_phan_9_desc: ""
  me_thuc_phan_9.a: ""
  
@@ -93,15 +93,15 @@
  me_thuc_phan_902_desc: ""
  me_thuc_phan_902.a: ""
 
- me_thuc_phan_10_title: ""
+ me_thuc_phan_10_title: "The Northern Threat"
  me_thuc_phan_10_desc: ""
  me_thuc_phan_10.a: ""
 
- me_thuc_phan_11_title: ""
+ me_thuc_phan_11_title: "The Southern Coast"
  me_thuc_phan_11_desc: ""
  me_thuc_phan_11.a: ""
 
- me_thuc_phan_12_title: ""
+ me_thuc_phan_12_title: "The Two People"
  me_thuc_phan_12_desc: ""
  me_thuc_phan_12.a: ""
 
@@ -129,7 +129,7 @@
  
  #Tooltips
  thuc_phan_missions_task_4_thuc_phan_becomes_ruler: "Thuc Phan becomes ruler of our country."
- thuc_phan_missions_task_4_claims: "TODO CLAIM TT"
+ thuc_phan_missions_task_4_claims: "We will receive claims on the #Y Yulin#!, #Y Xinggu#!, and #Y Jiaozhi#! areas."
  thuc_phan_missions_task_6_at_war_with_hung: "Be at war with the Hung Kings of Van Lang."
- thuc_phan_missions_task_6_claims: "TODO CLAIM TT"
- thuc_phan_missions_task_8_claims: "TODO CLAIM TT"
+ thuc_phan_missions_task_6_claims: "We will receive claims on the #Y Hong#! and #Y Jiuzhen#! areas."
+ thuc_phan_missions_task_8_claims: "We will receive claims on the #Y Hepu#!, #Y Cangwu#!, #Y Nanhai#!, #Y Zhuya#!, and #Y Rinan#! areas."
