thuc phan complete
added icon for bloodline_thuc_phan, change if you want

--- a/localization/english/missions/thuc_phan_missions_ti_l_english.yml
+++ b/localization/english/missions/thuc_phan_missions_ti_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
  thuc_phan_missions: "Rise of Thuc Phan"
- thuc_phan_missions_DESCRIPTION: "Mission description"
- thuc_phan_missions_CRITERIA_DESCRIPTION: "This mission will be completed when"
- thuc_phan_missions_BUTTON_TOOLTIP: ""
+ thuc_phan_missions_DESCRIPTION: "In the lands ruled by the Gui, an orphaned heir to throne has come of age, and although there are many opposed to seeing the young #E Thuc Phan#! claim his birthright, it will take much more than opposition at court to stop him from seizing what is rightfully his."
+ thuc_phan_missions_CRITERIA_DESCRIPTION: "This mission will be completed when Thuc Phan has led the glorious people of [ROOT.GetCountry.GetName] to their destiny, conquering neighboring threats and building a new kingdom that will stand the test of time."
+ thuc_phan_missions_BUTTON_TOOLTIP: "We must create the future we want for ourselves..."
 
  #Missions
 
@@ -54,7 +54,7 @@
  me_thuc_phan_2.a: "Everything that I do is for the betterment of the people"
 
  me_thuc_phan_3_title: "Defence Against the Hung"
- me_thuc_phan_3_desc: "Thanks to the strenuous efforts of [ROOT.GetCountry.GetRuler.GetName]'s men to construct fortifications in our south, we are in a state of military preparedness that rivals anything that we have ever experienced - something that feels good to [ROOT.GetCountry.GetRuler.GetFirstName], who feels that [ROOT.GetCountry.GetRuler.GetSheHe] is beginning to leave traces of [ROOT.GetCountry.GetRuler.GetHerHis] legacy through the nation."
+ me_thuc_phan_3_desc: "Thanks to the strenuous efforts of [ROOT.GetCountry.GetRuler.GetName]'s men to construct fortifications in our south, we are in a state of military preparedness that rivals anything that we have ever experienced - something that feels good to [ROOT.GetCountry.GetRuler.GetFirstName], who feels that [ROOT.GetCountry.GetRuler.GetSheHe] is beginning to leave traces of [ROOT.GetCountry.GetRuler.GetHerHis] legacy throughout the nation."
  me_thuc_phan_3.a: "The barbarians will never take these walls!"
 
  me_thuc_phan_4_title: "Rise of Thuc Phan"
@@ -62,62 +62,62 @@
  me_thuc_phan_4.a: "May the gods guide you better than they have me, [SCOPE.sCharacter('thuc_phan_char').GetFirstName]"
 
  me_thuc_phan_5_title: "Unite the Northern Tribes"
- me_thuc_phan_5_desc: ""
- me_thuc_phan_5.a: ""
+ me_thuc_phan_5_desc: "In a ruthless display, [ROOT.GetCountry.GetRuler.GetName] has crushed the northern tribes and brought those wild dogs to heel. The fierce northerners fought like demons to drive away the [ROOT.GetCountry.GetAdjective] levies from their scattered settlements, but despite their best efforts, they were broken to a man and now send tributes to [ROOT.GetCountry.GetCapital.GetName].\n\nRiding high from the victory, [ROOT.GetCountry.GetRuler.GetFirstName] has boldly vowed to destroy any others that might have ambitions on our territories."
+ me_thuc_phan_5.a: "A similar fate awaits any that stand in my way!"
 
  me_thuc_phan_6_title: "March to the South"
- me_thuc_phan_6_desc: ""
- me_thuc_phan_6.a: ""
+ me_thuc_phan_6_desc: "War has broken out between [ROOT.GetCountry.GetName] and the hosts of [GetCountry('LCV').GetName], with both sides vowing to [ROOT.GetCountry.Custom('get_war_god')] that they will make sacrifices in the temples once the campaigns have finished.\n\nBoth countries are grimly determined to see the other fall...there can be only one victor, and [ROOT.GetCountry.GetRuler.GetName] swears that it shall be [ROOT.GetCountry.GetRuler.GetHerHim]."
+ me_thuc_phan_6.a: "We shall not stop until we reach the #E River Hong#!..."
 
  me_thuc_phan_7_title: "Conquest of Hanoi"
- me_thuc_phan_7_desc: ""
- me_thuc_phan_7.a: ""
+ me_thuc_phan_7_desc: "The strength of [GetCountry('LCV').GetName] has been broken forevermore, and the triumphant armies of [ROOT.GetCountry.GetName] have now fully occupied the provinces that were once held by the cowardly Lacviet Chieftains, who have been imprisoned, slaughtered or sent into shameful exile.\n\nThe greatest prize that was taken was the port city of [GetProvince('(int32)9188').GetName], and it was [ROOT.GetCountry.GetRuler.GetName] that rode at the head of the forces that marched into the former Van Lang capital."
+ me_thuc_phan_7.a: "What a fortuitous day for the tribes of [ROOT.GetCountry.GetName]!"
 
  me_thuc_phan_8_title: "A New Kingdom"
- me_thuc_phan_8_desc: ""
- me_thuc_phan_8.a: ""
+ me_thuc_phan_8_desc: "Over the last few years, we have taken giant steps as a nation - not only have we built a kingdom worthy of a King on the battlefield, but the efforts of [ROOT.GetCountry.GetRuler.GetName] to improve the lives of the common people has turned [ROOT.GetCountry.GetName] into a force to be reckoned with.\n\nAs our centralization has grown under the guiding hand of [ROOT.GetCountry.GetRuler.GetFirstName], who has almost singlehandedly brought us to this moment, all were in agreement that we deserve to become a monarchy - [ROOT.GetCountry.GetRuler.GetFirstName] surely deserves this honor."
+ me_thuc_phan_8.a: "I promise to uphold the trust that you have placed in me today"
 
  me_thuc_phan_9_title: "Co Lao Citadel"
- me_thuc_phan_9_desc: ""
- me_thuc_phan_9.a: ""
+ me_thuc_phan_9_desc: "At last, the construction of the grand citadel commissioned by [ROOT.GetCountry.GetRuler.GetName] has been completed, and although some of the locals have jokingly suggested that the shape of the fortress is reminiscent of a snail's shell, the [ROOT.GetCountry.GetRulerTitle] only laughed when [ROOT.GetCountry.GetRuler.GetSheHe] heard this."
+ me_thuc_phan_9.a: "Co Lao Citadel shall stand until the end of days!"
  
- me_thuc_phan_900_title: ""
- me_thuc_phan_900_desc: ""
- me_thuc_phan_900.a: ""
+ me_thuc_phan_900_title: "Constructing A Citadel"
+ me_thuc_phan_900_desc: "As of late, [ROOT.GetCountry.GetRuler.GetName] has been spending time in [GetProvince('(int32)9188').GetName], having moved most of [ROOT.GetCountry.GetRuler.GetHerHis] staff to the former palaces owned by the Lacviet elites that once ruled over the city.\n\n[ROOT.GetCountry.GetRuler.GetFirstName] has been toying with the idea of building a massive citadel in the heart of town, one that will protect our [ROOT.GetCountry.GetAdjective] interests while projecting our authority throughout the region. Once the requisite funds were found and a special architect was brought to Luy Lau, the construction began in earnest."
+ me_thuc_phan_900.a: "I can hardly wait to see the results!"
  
- me_thuc_phan_901_title: ""
- me_thuc_phan_901_desc: ""
- me_thuc_phan_901.a: ""
+ me_thuc_phan_901_title: "Gifts from The Golden Turtle"
+ me_thuc_phan_901_desc: "Something miraculous happened today in [GetProvince('(int32)9188').GetName]; as the laborers continued to work on the foundations of the proposed citadel, the waters of the #E River Hong#! began to froth and churn. Moments later, a giant golden turtle, its carapace gleaming in the sun, swam up to the shore, where it then slowly crawled onto the soft banks before the murmuring crowds that were gathering. A golden claw was in its mouth, and the turtle dropped it onto the ground before turning towards the river once more.\n\nBy the time that [ROOT.GetCountry.GetRuler.GetFirstName] went down to investigate, the turtle had disappeared, but the locals swear that it was the avatar of the god #E Kim Quy#!, who has blessed the construction of the citadel with a priceless gift."
+ me_thuc_phan_901.a: "I cannot believe this...a god came to see what I have done"
  
- me_thuc_phan_902_title: ""
- me_thuc_phan_902_desc: ""
- me_thuc_phan_902.a: ""
+ me_thuc_phan_902_title: "Arrival of Co Lao"
+ me_thuc_phan_902_desc: "As word continued to spread throughout the lands of [ROOT.GetCountry.GetName] of the golden claw gifted to the nation by the turtle god #E Kim Quy#!, a general named [SCOPE.sCharacter('cao_lo_char').GetName] arrived in [GetProvince('(int32)9188').GetName], with hopes of determining the truth of the matter.\n\nWhen [SCOPE.sCharacter('cao_lo_char').GetFirstName] was satisfied with the veracity of the stories, he then asked to meet with [ROOT.GetCountry.GetRuler.GetFirstName], sending the following message.\n\n'Greetings, o victorious [ROOT.GetCountry.GetRulerTitle] of the immortal [ROOT.GetCountry.GetName] - your reputation for invincibility, tempered by a spirit of fairness and justice, travels quickly throughout the land. Allow me then, my liege, to offer you my services; if you permit me to study the golden claw gifted to the people, I believe that I can unlock the secrets of its construction, and I shall create a powerful weapon for the [ROOT.GetCountry.GetAdjective] armies.'"
+ me_thuc_phan_902.a: "If you can deliver what you promise, then it is a done deal"
 
  me_thuc_phan_10_title: "The Northern Threat"
- me_thuc_phan_10_desc: ""
- me_thuc_phan_10.a: ""
+ me_thuc_phan_10_desc: "The northern jungles and badlands that separate our borders from the staggering power of the #E Chinese#! kingdoms is a land filled with threatening #E Yue#! tribes. Notorious warmongers, these Yue dogs are easily persuaded by their avarice to launch invasions of their neighbors - a fact of life that has gone on for as long as anyone can remember, but no more.\n\n[ROOT.GetCountry.GetRuler.GetName] has subjugated these barbarians under our yoke, extending our hinterlands far beyond what they have ever been. Thanks to the martial efforts of our [ROOT.GetCountry.GetRulerTitle], we shall no longer worry about Yue skirmishers raiding our settlements in the dead of night."
+ me_thuc_phan_10.a: "I consider this threat to be pacified..."
 
  me_thuc_phan_11_title: "The Southern Coast"
- me_thuc_phan_11_desc: ""
- me_thuc_phan_11.a: ""
+ me_thuc_phan_11_desc: "Now that we have secured the southern coastlines for ourselves, one of the first decrees given by the mighty [ROOT.GetCountry.GetRuler.GetName] commanded that a navy be built in one of the ports that we have taken. This lawless land was once the plaything of pirates, especially the thieves living in the [GetProvince('(int32)9208').GetName] province, but with a strong fleet of [ROOT.GetCountry.GetAdjective] ships patrolling the shores, we hope that we can limit the damaging raids of the buccaneers, if not put an end to them entirely."
+ me_thuc_phan_11.a: "I will not hesitate to destroy anyone that attacks us"
 
  me_thuc_phan_12_title: "The Two People"
- me_thuc_phan_12_desc: ""
- me_thuc_phan_12.a: ""
+ me_thuc_phan_12_desc: "The decree issued by [ROOT.GetCountry.GetRuler.GetName] that fateful morning was destined to change the trajectory of [ROOT.GetCountry.GetName] forever"
+ me_thuc_phan_12.a: "Let there be no more arbitrary divisions between the people!"
 
  #Bloodline
  bloodline_thuc_phan: "Blood of Thuc Phan"
- bloodline_thuc_phan_desc: ""
+ bloodline_thuc_phan_desc: "A energetic young ruler with an eye on reform and bringing stability to his people, Thuc Phan brought many changes to the nation, laying down a foundation for the burgeoning Vietnamese civilization."
  
  #Modifiers
  thuc_phan_rice: "Rice Farming"
- desc_thuc_phan_rice: ""
+ desc_thuc_phan_rice: "The importance of the Linchen rice fields to our country cannot be overstated."
  thuc_phan_military_mod: "March of Thuc Phan"
- desc_thuc_phan_military_mod: ""
+ desc_thuc_phan_military_mod: "The state of war that exists between our kinsmen and the Lacviet tribes to the south has increased the need for manpower."
  co_lao_citadel: "Co Lao Citadel"
- desc_co_lao_citadel: ""
+ desc_co_lao_citadel: "Constructed in the shape of a vast rectangle, Co Lao Citadel has an imposing moat and a vast ramparts that dissuade attacking armies."
  au_lac_formation: "Formation of Au Lac"
- desc_au_lac_formation: ""
+ desc_au_lac_formation: "The reputation of the kingdom of Au Lac attracts many tribesmen, who eagerly embrace its superior cultural ways."
  
  #Formable
  AU_LAC_FORMABLE: "Au Lac"
@@ -125,7 +125,7 @@
  
  #Treasure
  kim_quy_turtle: "Claw of Kim Quy"
- kim_quy_turtle_desc: ""
+ kim_quy_turtle_desc: "A golden claw that was given to the nation by the turtle-god Kim Quy as a sign of his favor."
  
  #Tooltips
  thuc_phan_missions_task_4_thuc_phan_becomes_ruler: "Thuc Phan becomes ruler of our country."
