last bit of loc, whoops

--- a/localization/english/missions/thuc_phan_missions_ti_l_english.yml
+++ b/localization/english/missions/thuc_phan_missions_ti_l_english.yml
@@ -102,12 +102,12 @@
  me_thuc_phan_11.a: "I will not hesitate to destroy anyone that attacks us"
 
  me_thuc_phan_12_title: "The Two People"
- me_thuc_phan_12_desc: "The decree issued by [ROOT.GetCountry.GetRuler.GetName] that fateful morning was destined to change the trajectory of [ROOT.GetCountry.GetName] forever"
+ me_thuc_phan_12_desc: "The decree issued by [ROOT.GetCountry.GetRuler.GetName] that fateful morning was destined to change the trajectory of [ROOT.GetCountry.GetName] forever. No longer would be be considered two separate cultures living under one roof, but [ROOT.GetCountry.GetRuler.GetFirstName] announced that the kingdom of [ROOT.GetCountry.GetName] would be home to a unified people.\n\nAll hail the rise of [ROOT.GetCountry.GetName], forged by the iron hand and will of our [ROOT.GetCountry.GetRulerTitle]!"
  me_thuc_phan_12.a: "Let there be no more arbitrary divisions between the people!"
 
  #Bloodline
  bloodline_thuc_phan: "Blood of Thuc Phan"
- bloodline_thuc_phan_desc: "A energetic young ruler with an eye on reform and bringing stability to his people, Thuc Phan brought many changes to the nation, laying down a foundation for the burgeoning Vietnamese civilization."
+ bloodline_thuc_phan_desc: "An energetic young ruler with an eye on reform and bringing stability to his people, Thuc Phan brought many changes to the nation, laying down a foundation for the burgeoning Vietnamese civilization."
  
  #Modifiers
  thuc_phan_rice: "Rice Farming"
